# zhongshangxuan.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  resume.html  resume.qmd  resume.tex  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: quarto-publish.yml
_site/: about.html  index.html
web_output/: about.html  contact.html  index.html  projects.html  resume.html  search.json  styles.css
