[project]
name = "zhongshangxuan-github-io"
version = "0.0.1"
description = "Initial website for Zhong Shangxuan Github"
authors = [
    {name = "zhongshangxuan",email = "56307678+zhongshangxuan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "zhongshangxuan"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
